<resources>
    <string name="app_name">FASTBook</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="find_friends">Find Friends</string>
    <string name="messages">Messages</string>
    <string name="logout">LogOut</string>
    <string name="settings">Settings</string>


    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="todo">TODO</string>
    <string name="enter_nu_email">Enter NU Email</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

</resources>
