<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shahrukh.fastbook.Registration"

    android:background="@drawable/login_background"


    >

    <ImageView
        android:id="@+id/FAST_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/logo" android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"

        android:ems="10"
        android:hint="@string/enter_nu_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/common_google_signin_btn_text_dark_disabled"
        android:drawableLeft="@drawable/email"
        android:background="@drawable/inputs"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/FAST_logo"
        android:layout_marginTop="180dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/common_google_signin_btn_text_dark_disabled"
        android:drawableLeft="@drawable/password"
        android:background="@drawable/inputs"/>

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/password"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColorHint="@color/common_google_signin_btn_text_dark_disabled"
        android:drawableLeft="@drawable/password"
        android:background="@drawable/inputs"
        />

    <Button
        android:id="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/confirmpassword"
        android:layout_marginTop="33dp"
        android:text="@string/create_account" />
</RelativeLayout>
