<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".login">


    <ImageView
        android:id="@+id/FAST_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/logo" />


    <EditText
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/FAST_login_logo"
        android:layout_marginTop="30dp"
        android:background="@drawable/inputs"
        android:drawableLeft="@drawable/email"
        android:drawableStart="@drawable/email"
        android:ems="10"
        android:hint="@string/enter_nu_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/common_google_signin_btn_text_dark_disabled" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/email_login"
        android:layout_marginTop="21dp"
        android:background="@drawable/inputs"
        android:drawableLeft="@drawable/password"
        android:drawableStart="@drawable/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/common_google_signin_btn_text_dark_disabled" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/password_login"
        android:layout_marginTop="27dp"
        android:background="@drawable/button"
        android:onClick="userLogin"
        android:text="@string/login" />

    <TextView
        android:id="@+id/newAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="If not having account please logon with : "
        android:textColor="?android:attr/colorPressedHighlight"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/google_signin"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:src="@drawable/common_google_signin_btn_icon_dark" />
</RelativeLayout>
